[feat][#61] Implement tests for CompositeColumnCreator in the context of PropositionalizationService